force-app/main/default/objects/Archived_Client_Document__c/Archived_Client_Document__c.object-meta.xml
<CustomObject>
    <description>Snapshot of a Client Document, preserved when its owning Account (and therefore the original Client_Document__c record) is deleted. Not related to Account so it survives the deletion.</description>
    <label>Archived Client Document</label>
    <nameField>
        <displayFormat>ACD-{0000}</displayFormat>
        <label>Archived Client Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archived Client Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>