force-app/main/default/objects/Archived_Client_Document__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>