force-app/main/default/objects/Archived_Client_Document__c/fields/Original_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_Id__c</fullName>
    <label>Original Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>