force-app/main/default/objects/Archived_Client_Document__c/fields/Original_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_Name__c</fullName>
    <label>Original Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>