force-app/main/default/objects/Archived_Client_Document__c/fields/Original_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_Document_Id__c</fullName>
    <label>Original Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>